--- a/camp-coach-app/package.json
+++ b/camp-coach-app/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.86.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.86.2",
     "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
